# netsentry

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ci.yaml  cicids2017.yaml  default.yaml
deploy/: README.md
deploy/k8s/: deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml  servicemonitor.yaml
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml  serve-entrypoint.sh
docker/prometheus/: alerts.yml  prometheus.yml
docs/: ARCHITECTURE.md  DATA_CARD.md  EDA_SUMMARY.md  MODEL_CARD.md  TOUR.md
docs/reports/: INDEX.md  ablation.md  active_learning.md  adaptive_conformal.md  alert_fdr.md  alert_queue.md  anchors.md  anomaly.md  anomaly_explain.md  attack_navigator_layer.json  backdoor.md  base_rate.md  beacon_demo.md  campaigns.md  certify.md  conformal.md  cost.md  covariate_shift.md  cross_dataset.md  data_quality.md  data_value.md  distill.md  dp.md  drift.md  drift_tests.md  evaluation.md  exchangeability.md  exemplars.md  experts.md  extraction.md  gate.md  graph_demo.md  hardening.md  hmeasure.md  importance_stability.md  incident_demo.md  influence.md  interactions.md  label_audit.md  label_shift.md  (+34 more)
examples/: sample_flow.json  vulnpipe_findings.json
netsentry/: __init__.py  cli.py  log.py  seed.py
netsentry/capture/: __init__.py  demo.py  flows.py  pcap.py  score.py
netsentry/config/: __init__.py  loader.py  settings.py
netsentry/data/: __init__.py  clean.py  cross_dataset.py  download.py  schema.py  services.py  split.py  synthetic.py  validation.py
netsentry/demo/: __init__.py  core.py  dashboard.py
netsentry/evaluation/: __init__.py  ablation.py  active_learning.py  adaptive_conformal.py  alert_fdr.py  alert_queue.py  analyze.py  baserate.py  calibration.py  campaigns.py  confidence.py  conformal.py  cost.py  cross_dataset.py  data_value.py  gate.py  hmeasure.py  label_audit.py  label_shift.py  leaderboard.py  leakage.py  learning_curve.py  lodo.py  metrics.py  model_card.py  novelty.py  plots.py  ppi.py  report.py  rules.py  seed_variance.py  slices.py  socsim.py  subgroups.py  transfer.py
netsentry/explain/: __init__.py  anchors.py  anomaly_explain.py  counterfactual.py  distill.py  exemplars.py  importance_stability.py  influence.py  interactions.py  partial_dependence.py  shap_explainer.py
netsentry/features/: __init__.py  feature_sets.py  pipeline.py
netsentry/governance/: __init__.py  provenance.py
netsentry/integrations/: __init__.py  vulnpipe.py  zeek.py
netsentry/intel/: __init__.py  attack_mapping.py  beacon.py  graph.py  incident.py  navigator.py  report.py  sigma.py  stix.py
netsentry/models/: __init__.py  anomaly.py  base.py  calibration.py  promotion.py  registry.py  rules.py  supervised.py
netsentry/monitoring/: __init__.py  covariate_shift.py  detectors.py  drift.py  exchangeability.py  experts.py  monitor.py  refresh.py  report.py  retrain_policy.py  streaming.py
netsentry/robustness/: __init__.py  backdoor.py  certify.py  dp.py  evasion.py  extraction.py  hardening.py  membership.py  poisoning.py  report.py  sanitize.py  watermark.py
netsentry/serving/: __init__.py  app.py  batch.py  benchmark.py  bundle.py  canary.py  inference.py  metrics.py  onnx_export.py  schemas.py  watch.py
netsentry/training/: __init__.py  pu_learning.py  selftrain.py  tracking.py  train_anomaly.py  train_supervised.py  tune.py  unlearn.py  weak_supervision.py
netsentry/utils/: __init__.py  optional.py
notebooks/: 01_eda.ipynb
tests/: conftest.py
tests/integration/: test_analysis_reports.py  test_serving.py  (+4 more)
(+119 files in other folders)
