[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsentry"
version = "0.1.0"
description = "Leakage-safe ML network intrusion detection on CIC-IDS2017 with honest temporal evaluation, anomaly detection, explainability, and a served API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Connor McCune" }]
keywords = [
  "machine-learning",
  "intrusion-detection",
  "cybersecurity",
  "cic-ids2017",
  "anomaly-detection",
  "mlops",
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14.0",
  "scikit-learn>=1.4",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "typer>=0.12",
  "joblib>=1.3",
  "matplotlib>=3.8",
]

# Heavy/optional runtime stacks are extras so the core install is always
# satisfiable (incl. on very new Python versions without every wheel yet).
# The code degrades gracefully when a `train`/`ae` dep is absent: LightGBM ->
# scikit-learn HistGradientBoosting, SHAP -> permutation importance, MLflow ->
# local file logging, autoencoder -> Isolation Forest only.
[project.optional-dependencies]
train = [
  "lightgbm>=4.1",
  "shap>=0.44",
  "mlflow>=2.10",
  "imbalanced-learn>=0.12",
  "optuna>=3.5",
  "seaborn>=0.13",
]
ae = ["torch>=2.2"]
notebooks = ["jupyterlab>=4.0", "ipykernel>=6.29", "nbconvert>=7.0"]
serve = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "prometheus-client>=0.20",
  "httpx>=0.27",
]
dev = [
  "netsentry[serve]",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.9",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0",
]
all = ["netsentry[train,ae,serve,dev]"]

[project.scripts]
netsentry = "netsentry.cli:app"

[project.urls]
Homepage = "https://github.com/connor-p-mccune/netsentry"
Repository = "https://github.com/connor-p-mccune/netsentry"

[tool.setuptools.packages.find]
include = ["netsentry*"]

[tool.setuptools.package-data]
netsentry = ["py.typed"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["netsentry", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Stub modules intentionally raise NotImplementedError with unused args.
"netsentry/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["netsentry"]

[tool.mypy]
python_version = "3.11"
packages = ["netsentry"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# Optional heavy deps (lightgbm, torch, shap, mlflow, ...) may be uninstalled;
# they are lazily imported, so do not fail typecheck on their absence.
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
  "slow: tests needing heavy optional deps, the real dataset, or a trained model",
]

[tool.coverage.run]
source = ["netsentry"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
